--- a/Views/ContactsView.xaml
+++ b/Views/ContactsView.xaml
@@ -2,8 +2,9 @@
     x:Class="Aigul.Views.ContactsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Aigul.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Aigul.Views"
+    xmlns:local="clr-namespace:Aigul.Data"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:rxui="http://reactiveui.net"
     xmlns:vm="clr-namespace:Aigul.ViewModels"
@@ -12,5 +13,23 @@
     d:DesignWidth="800"
     x:TypeArguments="vm:ContactsViewModel"
     mc:Ignorable="d">
-    <Grid />
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <converters:BoolToObjectConverter
+                x:Key="IsAdminConverter"
+                FalseObject="Персонал"
+                TrueObject="Администартор" />
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <ItemsControl ItemsSource="{Binding Users}">
+        <ItemsControl.ItemTemplate>
+            <DataTemplate DataType="{x:Type local:User}">
+                <StackPanel Margin="10">
+                    <TextBlock Text="{Binding Name, StringFormat='Имя: {0}'}" />
+                    <TextBlock Text="{Binding IsAdmin, Converter={StaticResource IsAdminConverter}, StringFormat='Должность: {0}'}" />
+                </StackPanel>
+
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
+    </ItemsControl>
 </rxui:ReactiveUserControl>
